--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
     <div class="profile-container">
       <div class="profile-img">
         <!-- Gambar Utama -->
-        <img src="c:\Users\Vanessa\Documents\Portofolio Keysia\img\keysia2.jpg" alt="Foto Kamu" class="main-img">
+        <img src="img\keysia2.jpg" alt="Foto Kamu" class="main-img">
         <!-- Gambar Hover -->
-        <img src="c:\Users\Vanessa\Documents\Portofolio Keysia\img\keysiachibi.jpg" alt="Foto Hover" class="hover-img">
+        <img src="img\keysiachibi.jpg" alt="Foto Hover" class="hover-img">
       </div>
       <div class="profile-info">
         <h1>KEYSIA WULANDANI</h1>
@@ -244,3 +244,4 @@ Ke depan, saya bercita-cita menjadi seorang profesional di bidang teknologi info
   </main>
 </body>
 </html>
+
